[MODEUSHARV-143] Upgrade module to Vert.x 5.0 (#209)
* Upgrade Vert.x to v5.0.6, RMB to v36.0.0-SNAPSHOT

* Refactor custom Launcher logic into RMB init hook

* Adjust core module for Vert.x 5

* Adjust cs41 module for Vert.x 5

* Adjust c50 module for Vert.x 5

* Adjust nss module for Vert.x 5

* Fix argLine overriding jacoco agents arguments

* Apply code formatting

* Fix argLine overriding jacoco agents arguments

* Address PR comments